docs/upbound-provider-gcp/1.8/apigee/v1beta1/organization.md
---
permalink: /upbound-provider-gcp/1.8/apigee/v1beta1/organization/
---

# apigee.v1beta1.organization

"Organization is the Schema for the Organizations API. An"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAnalyticsRegion(analyticsRegion)`](#fn-specforproviderwithanalyticsregion)
    * [`fn withApiConsumerDataEncryptionKeyName(apiConsumerDataEncryptionKeyName)`](#fn-specforproviderwithapiconsumerdataencryptionkeyname)
    * [`fn withApiConsumerDataLocation(apiConsumerDataLocation)`](#fn-specforproviderwithapiconsumerdatalocation)
    * [`fn withAuthorizedNetwork(authorizedNetwork)`](#fn-specforproviderwithauthorizednetwork)
    * [`fn withBillingType(billingType)`](#fn-specforproviderwithbillingtype)
    * [`fn withControlPlaneEncryptionKeyName(controlPlaneEncryptionKeyName)`](#fn-specforproviderwithcontrolplaneencryptionkeyname)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDisableVpcPeering(disableVpcPeering)`](#fn-specforproviderwithdisablevpcpeering)
    * [`fn withDisplayName(displayName)`](#fn-specforproviderwithdisplayname)
    * [`fn withProjectId(projectId)`](#fn-specforproviderwithprojectid)
    * [`fn withProperties(properties)`](#fn-specforproviderwithproperties)
    * [`fn withPropertiesMixin(properties)`](#fn-specforproviderwithpropertiesmixin)
    * [`fn withRetention(retention)`](#fn-specforproviderwithretention)
    * [`fn withRuntimeDatabaseEncryptionKeyName(runtimeDatabaseEncryptionKeyName)`](#fn-specforproviderwithruntimedatabaseencryptionkeyname)
    * [`fn withRuntimeType(runtimeType)`](#fn-specforproviderwithruntimetype)
    * [`obj spec.forProvider.authorizedNetworkRef`](#obj-specforproviderauthorizednetworkref)
      * [`fn withName(name)`](#fn-specforproviderauthorizednetworkrefwithname)
      * [`obj spec.forProvider.authorizedNetworkRef.policy`](#obj-specforproviderauthorizednetworkrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderauthorizednetworkrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderauthorizednetworkrefpolicywithresolve)
    * [`obj spec.forProvider.authorizedNetworkSelector`](#obj-specforproviderauthorizednetworkselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderauthorizednetworkselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderauthorizednetworkselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderauthorizednetworkselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.authorizedNetworkSelector.policy`](#obj-specforproviderauthorizednetworkselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderauthorizednetworkselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderauthorizednetworkselectorpolicywithresolve)
    * [`obj spec.forProvider.properties`](#obj-specforproviderproperties)
      * [`fn withProperty(property)`](#fn-specforproviderpropertieswithproperty)
      * [`fn withPropertyMixin(property)`](#fn-specforproviderpropertieswithpropertymixin)
      * [`obj spec.forProvider.properties.property`](#obj-specforproviderpropertiesproperty)
        * [`fn withName(name)`](#fn-specforproviderpropertiespropertywithname)
        * [`fn withValue(value)`](#fn-specforproviderpropertiespropertywithvalue)
    * [`obj spec.forProvider.runtimeDatabaseEncryptionKeyNameRef`](#obj-specforproviderruntimedatabaseencryptionkeynameref)
      * [`fn withName(name)`](#fn-specforproviderruntimedatabaseencryptionkeynamerefwithname)
      * [`obj spec.forProvider.runtimeDatabaseEncryptionKeyNameRef.policy`](#obj-specforproviderruntimedatabaseencryptionkeynamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderruntimedatabaseencryptionkeynamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderruntimedatabaseencryptionkeynamerefpolicywithresolve)
    * [`obj spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector`](#obj-specforproviderruntimedatabaseencryptionkeynameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderruntimedatabaseencryptionkeynameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderruntimedatabaseencryptionkeynameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderruntimedatabaseencryptionkeynameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.policy`](#obj-specforproviderruntimedatabaseencryptionkeynameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderruntimedatabaseencryptionkeynameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderruntimedatabaseencryptionkeynameselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAnalyticsRegion(analyticsRegion)`](#fn-specinitproviderwithanalyticsregion)
    * [`fn withApiConsumerDataEncryptionKeyName(apiConsumerDataEncryptionKeyName)`](#fn-specinitproviderwithapiconsumerdataencryptionkeyname)
    * [`fn withApiConsumerDataLocation(apiConsumerDataLocation)`](#fn-specinitproviderwithapiconsumerdatalocation)
    * [`fn withAuthorizedNetwork(authorizedNetwork)`](#fn-specinitproviderwithauthorizednetwork)
    * [`fn withBillingType(billingType)`](#fn-specinitproviderwithbillingtype)
    * [`fn withControlPlaneEncryptionKeyName(controlPlaneEncryptionKeyName)`](#fn-specinitproviderwithcontrolplaneencryptionkeyname)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withDisableVpcPeering(disableVpcPeering)`](#fn-specinitproviderwithdisablevpcpeering)
    * [`fn withDisplayName(displayName)`](#fn-specinitproviderwithdisplayname)
    * [`fn withProjectId(projectId)`](#fn-specinitproviderwithprojectid)
    * [`fn withProperties(properties)`](#fn-specinitproviderwithproperties)
    * [`fn withPropertiesMixin(properties)`](#fn-specinitproviderwithpropertiesmixin)
    * [`fn withRetention(retention)`](#fn-specinitproviderwithretention)
    * [`fn withRuntimeDatabaseEncryptionKeyName(runtimeDatabaseEncryptionKeyName)`](#fn-specinitproviderwithruntimedatabaseencryptionkeyname)
    * [`fn withRuntimeType(runtimeType)`](#fn-specinitproviderwithruntimetype)
    * [`obj spec.initProvider.authorizedNetworkRef`](#obj-specinitproviderauthorizednetworkref)
      * [`fn withName(name)`](#fn-specinitproviderauthorizednetworkrefwithname)
      * [`obj spec.initProvider.authorizedNetworkRef.policy`](#obj-specinitproviderauthorizednetworkrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderauthorizednetworkrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderauthorizednetworkrefpolicywithresolve)
    * [`obj spec.initProvider.authorizedNetworkSelector`](#obj-specinitproviderauthorizednetworkselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderauthorizednetworkselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderauthorizednetworkselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderauthorizednetworkselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.authorizedNetworkSelector.policy`](#obj-specinitproviderauthorizednetworkselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderauthorizednetworkselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderauthorizednetworkselectorpolicywithresolve)
    * [`obj spec.initProvider.properties`](#obj-specinitproviderproperties)
      * [`fn withProperty(property)`](#fn-specinitproviderpropertieswithproperty)
      * [`fn withPropertyMixin(property)`](#fn-specinitproviderpropertieswithpropertymixin)
      * [`obj spec.initProvider.properties.property`](#obj-specinitproviderpropertiesproperty)
        * [`fn withName(name)`](#fn-specinitproviderpropertiespropertywithname)
        * [`fn withValue(value)`](#fn-specinitproviderpropertiespropertywithvalue)
    * [`obj spec.initProvider.runtimeDatabaseEncryptionKeyNameRef`](#obj-specinitproviderruntimedatabaseencryptionkeynameref)
      * [`fn withName(name)`](#fn-specinitproviderruntimedatabaseencryptionkeynamerefwithname)
      * [`obj spec.initProvider.runtimeDatabaseEncryptionKeyNameRef.policy`](#obj-specinitproviderruntimedatabaseencryptionkeynamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderruntimedatabaseencryptionkeynamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderruntimedatabaseencryptionkeynamerefpolicywithresolve)
    * [`obj spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector`](#obj-specinitproviderruntimedatabaseencryptionkeynameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderruntimedatabaseencryptionkeynameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderruntimedatabaseencryptionkeynameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderruntimedatabaseencryptionkeynameselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.policy`](#obj-specinitproviderruntimedatabaseencryptionkeynameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderruntimedatabaseencryptionkeynameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderruntimedatabaseencryptionkeynameselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Organization

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"OrganizationSpec defines the desired state of Organization"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAnalyticsRegion

```ts
withAnalyticsRegion(analyticsRegion)
```

"Primary GCP region for analytics data storage. For valid values, see Create an Apigee organization."

### fn spec.forProvider.withApiConsumerDataEncryptionKeyName

```ts
withApiConsumerDataEncryptionKeyName(apiConsumerDataEncryptionKeyName)
```

"Cloud KMS key name used for encrypting API consumer data."

### fn spec.forProvider.withApiConsumerDataLocation

```ts
withApiConsumerDataLocation(apiConsumerDataLocation)
```

"This field is needed only for customers using non-default data residency regions.\nApigee stores some control plane data only in single region.\nThis field determines which single region Apigee should use."

### fn spec.forProvider.withAuthorizedNetwork

```ts
withAuthorizedNetwork(authorizedNetwork)
```

"Compute Engine network used for Service Networking to be peered with Apigee runtime instances.\nSee Getting started with the Service Networking API.\nValid only when RuntimeType is set to CLOUD. The value can be updated only when there are no runtime instances. For example: \"default\"."

### fn spec.forProvider.withBillingType

```ts
withBillingType(billingType)
```

"Billing type of the Apigee organization. See Apigee pricing."

### fn spec.forProvider.withControlPlaneEncryptionKeyName

```ts
withControlPlaneEncryptionKeyName(controlPlaneEncryptionKeyName)
```

"Cloud KMS key name used for encrypting control plane data that is stored in a multi region.\nOnly used for the data residency region \"US\" or \"EU\"."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"Description of the Apigee organization."

### fn spec.forProvider.withDisableVpcPeering

```ts
withDisableVpcPeering(disableVpcPeering)
```

"Flag that specifies whether the VPC Peering through Private Google Access should be\ndisabled between the consumer network and Apigee. Required if an authorizedNetwork\non the consumer project is not provided, in which case the flag should be set to true.\nValid only when RuntimeType is set to CLOUD. The value must be set before the creation\nof any Apigee runtime instance and can be updated only when there are no runtime instances."

### fn spec.forProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"The display name of the Apigee organization."

### fn spec.forProvider.withProjectId

```ts
withProjectId(projectId)
```

"The project ID associated with the Apigee organization."

### fn spec.forProvider.withProperties

```ts
withProperties(properties)
```

"Properties defined in the Apigee organization profile.\nStructure is documented below."

### fn spec.forProvider.withPropertiesMixin

```ts
withPropertiesMixin(properties)
```

"Properties defined in the Apigee organization profile.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRetention

```ts
withRetention(retention)
```

"Optional. This setting is applicable only for organizations that are soft-deleted (i.e., BillingType\nis not EVALUATION). It controls how long Organization data will be retained after the initial delete\noperation completes. During this period, the Organization may be restored to its last known state.\nAfter this period, the Organization will no longer be able to be restored.\nDefault value is DELETION_RETENTION_UNSPECIFIED.\nPossible values are: DELETION_RETENTION_UNSPECIFIED, MINIMUM."

### fn spec.forProvider.withRuntimeDatabaseEncryptionKeyName

```ts
withRuntimeDatabaseEncryptionKeyName(runtimeDatabaseEncryptionKeyName)
```

"Cloud KMS key name used for encrypting the data that is stored and replicated across runtime instances.\nUpdate is not allowed after the organization is created.\nIf not specified, a Google-Managed encryption key will be used.\nValid only when RuntimeType is CLOUD. For example: projects/foo/locations/us/keyRings/bar/cryptoKeys/baz."

### fn spec.forProvider.withRuntimeType

```ts
withRuntimeType(runtimeType)
```

"Runtime type of the Apigee organization based on the Apigee subscription purchased.\nDefault value is CLOUD.\nPossible values are: CLOUD, HYBRID."

## obj spec.forProvider.authorizedNetworkRef

"Reference to a Network in compute to populate authorizedNetwork."

### fn spec.forProvider.authorizedNetworkRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.authorizedNetworkRef.policy

"Policies for referencing."

### fn spec.forProvider.authorizedNetworkRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.authorizedNetworkRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.authorizedNetworkSelector

"Selector for a Network in compute to populate authorizedNetwork."

### fn spec.forProvider.authorizedNetworkSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.authorizedNetworkSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.authorizedNetworkSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.authorizedNetworkSelector.policy

"Policies for selection."

### fn spec.forProvider.authorizedNetworkSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.authorizedNetworkSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.properties

"Properties defined in the Apigee organization profile.\nStructure is documented below."

### fn spec.forProvider.properties.withProperty

```ts
withProperty(property)
```

"List of all properties in the object.\nStructure is documented below."

### fn spec.forProvider.properties.withPropertyMixin

```ts
withPropertyMixin(property)
```

"List of all properties in the object.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.properties.property

"List of all properties in the object.\nStructure is documented below."

### fn spec.forProvider.properties.property.withName

```ts
withName(name)
```

"Name of the property."

### fn spec.forProvider.properties.property.withValue

```ts
withValue(value)
```

"Value of the property."

## obj spec.forProvider.runtimeDatabaseEncryptionKeyNameRef

"Reference to a CryptoKey in kms to populate runtimeDatabaseEncryptionKeyName."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.runtimeDatabaseEncryptionKeyNameRef.policy

"Policies for referencing."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector

"Selector for a CryptoKey in kms to populate runtimeDatabaseEncryptionKeyName."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.policy

"Policies for selection."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.runtimeDatabaseEncryptionKeyNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAnalyticsRegion

```ts
withAnalyticsRegion(analyticsRegion)
```

"Primary GCP region for analytics data storage. For valid values, see Create an Apigee organization."

### fn spec.initProvider.withApiConsumerDataEncryptionKeyName

```ts
withApiConsumerDataEncryptionKeyName(apiConsumerDataEncryptionKeyName)
```

"Cloud KMS key name used for encrypting API consumer data."

### fn spec.initProvider.withApiConsumerDataLocation

```ts
withApiConsumerDataLocation(apiConsumerDataLocation)
```

"This field is needed only for customers using non-default data residency regions.\nApigee stores some control plane data only in single region.\nThis field determines which single region Apigee should use."

### fn spec.initProvider.withAuthorizedNetwork

```ts
withAuthorizedNetwork(authorizedNetwork)
```

"Compute Engine network used for Service Networking to be peered with Apigee runtime instances.\nSee Getting started with the Service Networking API.\nValid only when RuntimeType is set to CLOUD. The value can be updated only when there are no runtime instances. For example: \"default\"."

### fn spec.initProvider.withBillingType

```ts
withBillingType(billingType)
```

"Billing type of the Apigee organization. See Apigee pricing."

### fn spec.initProvider.withControlPlaneEncryptionKeyName

```ts
withControlPlaneEncryptionKeyName(controlPlaneEncryptionKeyName)
```

"Cloud KMS key name used for encrypting control plane data that is stored in a multi region.\nOnly used for the data residency region \"US\" or \"EU\"."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"Description of the Apigee organization."

### fn spec.initProvider.withDisableVpcPeering

```ts
withDisableVpcPeering(disableVpcPeering)
```

"Flag that specifies whether the VPC Peering through Private Google Access should be\ndisabled between the consumer network and Apigee. Required if an authorizedNetwork\non the consumer project is not provided, in which case the flag should be set to true.\nValid only when RuntimeType is set to CLOUD. The value must be set before the creation\nof any Apigee runtime instance and can be updated only when there are no runtime instances."

### fn spec.initProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"The display name of the Apigee organization."

### fn spec.initProvider.withProjectId

```ts
withProjectId(projectId)
```

"The project ID associated with the Apigee organization."

### fn spec.initProvider.withProperties

```ts
withProperties(properties)
```

"Properties defined in the Apigee organization profile.\nStructure is documented below."

### fn spec.initProvider.withPropertiesMixin

```ts
withPropertiesMixin(properties)
```

"Properties defined in the Apigee organization profile.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withRetention

```ts
withRetention(retention)
```

"Optional. This setting is applicable only for organizations that are soft-deleted (i.e., BillingType\nis not EVALUATION). It controls how long Organization data will be retained after the initial delete\noperation completes. During this period, the Organization may be restored to its last known state.\nAfter this period, the Organization will no longer be able to be restored.\nDefault value is DELETION_RETENTION_UNSPECIFIED.\nPossible values are: DELETION_RETENTION_UNSPECIFIED, MINIMUM."

### fn spec.initProvider.withRuntimeDatabaseEncryptionKeyName

```ts
withRuntimeDatabaseEncryptionKeyName(runtimeDatabaseEncryptionKeyName)
```

"Cloud KMS key name used for encrypting the data that is stored and replicated across runtime instances.\nUpdate is not allowed after the organization is created.\nIf not specified, a Google-Managed encryption key will be used.\nValid only when RuntimeType is CLOUD. For example: projects/foo/locations/us/keyRings/bar/cryptoKeys/baz."

### fn spec.initProvider.withRuntimeType

```ts
withRuntimeType(runtimeType)
```

"Runtime type of the Apigee organization based on the Apigee subscription purchased.\nDefault value is CLOUD.\nPossible values are: CLOUD, HYBRID."

## obj spec.initProvider.authorizedNetworkRef

"Reference to a Network in compute to populate authorizedNetwork."

### fn spec.initProvider.authorizedNetworkRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.authorizedNetworkRef.policy

"Policies for referencing."

### fn spec.initProvider.authorizedNetworkRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.authorizedNetworkRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.authorizedNetworkSelector

"Selector for a Network in compute to populate authorizedNetwork."

### fn spec.initProvider.authorizedNetworkSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.authorizedNetworkSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.authorizedNetworkSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.authorizedNetworkSelector.policy

"Policies for selection."

### fn spec.initProvider.authorizedNetworkSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.authorizedNetworkSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.properties

"Properties defined in the Apigee organization profile.\nStructure is documented below."

### fn spec.initProvider.properties.withProperty

```ts
withProperty(property)
```

"List of all properties in the object.\nStructure is documented below."

### fn spec.initProvider.properties.withPropertyMixin

```ts
withPropertyMixin(property)
```

"List of all properties in the object.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.properties.property

"List of all properties in the object.\nStructure is documented below."

### fn spec.initProvider.properties.property.withName

```ts
withName(name)
```

"Name of the property."

### fn spec.initProvider.properties.property.withValue

```ts
withValue(value)
```

"Value of the property."

## obj spec.initProvider.runtimeDatabaseEncryptionKeyNameRef

"Reference to a CryptoKey in kms to populate runtimeDatabaseEncryptionKeyName."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.runtimeDatabaseEncryptionKeyNameRef.policy

"Policies for referencing."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector

"Selector for a CryptoKey in kms to populate runtimeDatabaseEncryptionKeyName."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.policy

"Policies for selection."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.runtimeDatabaseEncryptionKeyNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."